<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EUREKA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Go">Go!</string>
    <string name="reg">Register</string>
    <string name="Email">Email</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="register">Register!</string>
    <string name="PasswordError">Please make sure that the Password and the Confirm password are the same!</string>
    <string name="Points">Points</string>
    <string name="maaApp">maaApp</string>
	<string name="hinthint">hint hint</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="Answer">Answer</string>
    <string name="best_answer">Choose best answer</string>
    <string name="questionTitle">Title</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="EUREKA">EUREKA</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Refreshing....</string>
    <string name="pull_to_refresh_refreshing_label">Updating</string>
    <string name="pull_to_refresh_tap_label">Pull to refresh answer list</string>
    <string name="personal_setting">Personal Setting</string>

</resources>
